...
      image: require("../assets/images/slide4.png"),
      title: "Personalize Your Learning Path",
      subtitle:
        "Customize your learning with progress tracking, and interactive activities.",
    },
  ],
  contButtonText: "CONTINUE",
};

export const signUpSelectionConstants = {
  pageTitle: "I am a...",
  roles: [
    {
      image: require("../assets/images/Instructor.png"),
      buttonText: "INSTRUCTOR",
    },
    {
      image: require("../assets/images/Students.png"),
      buttonText: "STUDENT",
    },
  ],
  pageSubTitle: "Endless Opportunities. For Anyone.",
};

export const memberSignInUpPageConstants = {
  signUpPageTitle: "Unlock Your Learning Potential",
  signUpPageSubtitle:
    "Your Gateway To Personalized Courses, And Guidance For Success.",
  signInButtonText: "SIGN IN",
  signUpButtonText: "SIGN UP",
  homepageButtonText: "HOMEPAGE",
  adminButtonText: "ADMIN",
};

export const instructorSignInUpPageConstants = {
  signUpPageTitle: "Share your knowledge",
...

export const memberLoginPageConstants = {
  pageTitle: "SIGN IN",
  pageSubTitle: "Sign In To Access Your Personalized Learning Journey",
  fields: [
    {
      inputTitle: "Email",
      placeHolder: "Email",
    },
    { inputTitle: "Password", placeHolder: "Password" },
    { inputTitle: "Domain", options: ["Member", "Instructor"] },
  ],
  signInButtonText: "Sign In",
  invalidCredentialsAlert:
    "Please check your email and password and try again.",
  errorSigningUpAlert: "An error occurred while signing up.",
  unexpectedErrorAlert: "An unexpected error occurred.",
  accountDisabledAlert: "Your account has been disabled.",
  dontHaveAccountText: "New to MobiLearn? ",
...
export const signUpPageConstants = {
  pageTitle: "SIGN UP",
  pageSubTitle: "Create Your Account To Embark On A Journey Of Learning.",
  fields: [
    {
      inputTitle: "Username",
      placeHolder: "John Cena",
    },
    {
      inputTitle: "Email",
      placeHolder: "youremail@gmail.com",
    },
    {
      inputTitle: "Gender",
      options: ["Male", "Female"],
    },
    { inputTitle: "Password", placeHolder: "Password" },
    {
      inputTitle: "Confirm Password",
      placeHolder: "Password",
    },
  ],
  regButtonText: "Register",
  inputsEmptyAlert: "Please fill in all fields.",
  passwordMismatchAlert: "Passwords do not match.",
  accountDisabledAlert: "Your account has been disabled.",
  invalidCredentialsAlert:
    "Please check your email and password and try again.",
  errorSigningUpAlert: "An error occurred while signing up.",
...
    {
      inputTitle: "Company",
      placeHolder: "DanielDantePteLtd",
    },
    {
      inputTitle: "Position in Company",
      placeHolder: "Chief Tech Officer",
    },
    { inputTitle: "Password", placeHolder: "Password" },
    {
      inputTitle: "Confirm Password",
      placeHolder: "Password",
    },
  ],
  areaCodes: [
    "+1 USA",
    "+65 Singapore",
    "+86 China",
    "+44 United Kingdom",
    "+49 Germany",
    "+33 France",
    "+61 Australia",
    "+62 Indonesia",
...

export const registrationSuccessMember = {
  pageTitle: "MobiLearn",
  blueSubTitle: "You have registered as a",
  role: "Student",
  subTitle: "Welcome to A Lifelong Of Learning.",
  linkText: "Begin Learning",
  image: require("../assets/images/Students.png"),
};

export const registrationSuccessInstructor = {
  pageTitle: "MobiLearn",
  blueSubTitle: "You have registered as a",
...
export const memberGuestProfilePage = {
  appBarTitle: "My Profile",
  editIcon: require("@/assets/images/icons/edit.png"),
  paymentMethodTitle: "Payment Method",
  settingsTitle: "Settings",
  donateTitle: "Donate",
  logOutTitle: "Logout",
  default_profile_picture: require("@/assets/images/member_guest_images/blank_profile_pic.jpg"),
  normalDisplayName: "Learner",
  memberDisplayName: "Member",
  coreMemberDisplayName: "Senior",
};

...
    {
      name: {
        inputTitle: "Your username",
        modalDetails: [
          {
            inputTitle: "Username",
            placeholder: "Please enter username",
          },
        ],
      },
    },
    {
      email: {
...
  ],
  saveChanges: "Save",
  default_profile_picture: require("@/assets/images/member_guest_images/blank_profile_pic.jpg"),
};

export const memberGuestEditProfileFields = {
  edit: "Edit",
  notAdded: "Not added",
  maskedPassword: "******",
};

export const memberGuestEditProfilePopUp = {
  save: "SAVE",
};

export const memberGuestPaymentMethodPage = {
  appBarTitle: "Payment Method",
  title: "Select Payment Method",
};

export const inputDropDownFieldConstants = {
  selectOption: "Please select an option",
};

export const phoneNumberInputFieldConstants = {
  search: "Search...",
  enterPhone: "Enter your phone number",
  seachAreaCode: "Search area codes",
};

export const courseDetailsConstants = {
  enrolledCountText: " students already enrolled",
  courseDetails: "Course Details",
...
  backButton: require("@/assets/images/notifications/backButton.png"),
  editCourseTitle: "Edit Course",
  reviewButton: "Reviews",
};

export const instructorHomePageConstants = {
  pageTitle: "Home",
};

export const instructorStatisticsConstants = {
  pageTitle: "Statistics",
  dropdown: ["Weekly", "Monthly", "Yearly"],
  totalLessons: "Total Lessons",
...
  pdfUploadedAlert: "PDF has been uploaded.",
  noFileSelectedError: "No file selected.",
  handleUploadPdfError: "Error in handleUploadPdf:",
  checkingPermissionError: "Error in checking permission:",
  permissionDeniedAlert:
    "Sorry, we need camera roll permissions to make this work!",
  nextButtonText: "Next",
  saveButtonText: "Save",
  updateButtonText: "Update",
  createButtonText: "Create Course",
  minus: "-",
  plus: "+",
  lessonTypeTitle: "Lesson Type",
...
  ],
  saveChanges: "Save",
  default_profile_picture: require("@/assets/images/member_guest_images/blank_profile_pic.jpg"),
};

export const memberChannelSignUpPage = {
  pageTitle: "Channel Registration",
  noChannelsAvailable: "No channels available",
  dropDownTitle: "Select a channel",
  inviteCodeTitle1: "Please enter an invite code",
  inviteCodeTitle2: "Or enter an invite code",
  inviteCodePlaceholder: "Enter invite code",
  inviteCodeTitle: "Or enter an invite code",
...
