...
      ...inputs,
      [name]: value,
    });
  };

  const handleAreaCodeChange = (areaCode: string) => {
    // Extract only the numeric part from the selected area code (e.g., "+1" from "+1 USA")
    const numericAreaCode = areaCode.split(" ")[0];
    // Split the combined phone number to separate the existing phone number
    const currentPhoneNumber = inputs.combinedPhoneNumber.replace(
      /^\+\d{1,3}\s/,
      ""
    ); // Remove area code from combined string
...
