...
        "id": "4",
        "image": "../assets/images/slide4.png",
        "title": "Personalize Your Learning Path",
        "subtitle": "Customize your learning with progress tracking, and interactive activities."
      }
    ],
    "contButtonText": "CONTINUE"
  },
  "signUpSelectionConstants": {
    "pageTitle": "I am a...",
    "roles": [
      {
        "image": "../assets/images/Instructor.png",
        "buttonText": "INSTRUCTOR"
      },
      {
        "image": "../assets/images/Students.png",
        "buttonText": "STUDENT"
      }
    ],
    "pageSubTitle": "Endless Opportunities. For Anyone."
  },
  "memberSignInUpPageConstants": {
    "signUpPageTitle": "Unlock Your Learning Potential",
    "signUpPageSubtitle": "Your Gateway To Personalized Courses, And Guidance For Success.",
    "signInButtonText": "SIGN IN",
    "signUpButtonText": "SIGN UP",
    "homepageButtonText": "HOMEPAGE",
    "adminButtonText": "ADMIN"
  },
  "instructorSignInUpPageConstants": {
    "signUpPageTitle": "Share your knowledge",
...
  },
  "memberLoginPageConstants": {
    "pageTitle": "SIGN IN",
    "pageSubTitle": "Sign In To Access Your Personalized Learning Journey",
    "fields": [
      {
        "inputTitle": "Email",
        "placeHolder": "Email"
      },
      {
        "inputTitle": "Password",
        "placeHolder": "Password"
      },
      {
        "inputTitle": "Domain",
        "options": ["Member", "Instructor"]
      }
    ],
    "signInButtonText": "Sign In",
    "invalidCredentialsAlert": "Please check your email and password and try again.",
    "errorSigningUpAlert": "An error occurred while signing up.",
    "unexpectedErrorAlert": "An unexpected error occurred.",
    "accountDisabledAlert": "Your account has been disabled.",
    "dontHaveAccountText": "New to MobiLearn? ",
    "signUpText": "Sign Up",
...
  },

  "memberGuestHomeConstants": {
    "notifBellButton": "@/assets/images/member_guest_images/notifBell.png",
    "suggestionsSubHeader": "Suggestions for You",
    "topCoursesSubHeader": "Top Courses",
    "seeAllText": "See All"
  },

  "memberGuestAppBarConstants": {
    "hamburgerIcon": "@/assets/images/member_guest_images/hamburger.png",
    "dropDownPlaceholder": "Switch Channel",
    "searchPlaceholder": "Search..."
...
  "memberGuestProfilePage": {
    "appBarTitle": "My Profile",
    "editIcon": "@/assets/images/icons/edit.png",
    "paymentMethodTitle": "Payment Method",
    "settingsTitle": "Settings",
    "donateTitle": "Donate",
    "logOutTitle": "Logout",
    "default_profile_picture": "@/assets/images/member_guest_images/blank_profile_pic.jpg",
    "normalDisplayName": "Learner",
    "memberDisplayName": "Member",
    "coreMemberDisplayName": "Senior"
  },
  "memberGuestEditProfilePage": {
    "fields": {
      "name": {
        "inputTitle": "Your username",
        "modalDetails": [
          {
            "inputTitle": "Username",
            "placeholder": "Please enter username"
          }
        ]
      },
      "email": {
        "inputTitle": "Email",
        "modalDetails": [
...
    "tryAgain": "Please try again later.",
    "cameraRollPermission": "Sorry, we need camera roll permissions to make this work!",
    "appBarTitle": "Edit Profile"
  },

  "memberGuestEditProfileFields": {
    "edit": "Edit",
    "notAdded": "Not added",
    "maskedPassword": "******"
  },

  "memberGuestEditProfilePopUp": {
    "save": "SAVE"
  },

  "memberGuestPaymentMethodPage": {
    "appBarTitle": "Payment Method",
    "title": "Select Payment Method"
  },
...
    "courseDetails": "Course Details",
    "lecture": "Lecture",
    "learningTime": "Learning Time",
    "certification": "Certification",
    "numLectures": "+ Lectures",
    "skillsTitle": "Skills",
    "enrollNowButton": "ENROLL NOW"
  },

  "paymentProgressBarConstants": {
    "stepText": [1, 2, 3],
    "stepLabel": ["Overview", "Payment Method", "Completed"]
  },
...
    "continueButton": "CONTINUE",
    "disclaimer": "We will store and use your card details for smooth and secure future purchases."
  },
  "paymentCompletedConstants": {
    "completePurchase": "@/assets/images/member_guest_images/completePurchase.png",
    "completePurchaseSlide": "@/assets/images/member_guest_images/completePurchaseSlide.png",
    "congratulations": "Congratulations!",
    "congratulationSubtext": "Start Your Learning Today",
    "continueButton": "CONTINUE"
  },

  "courseContentConstants": {
    "chapter": "Chap",
...
    "appBarTitle": "Edit Profile"
  },

  "memberChannelSignUpPage": {
    "pageTitle": "Channel Registration",
    "noChannelsAvailable": "No channels available",
    "dropDownTitle": "Select a channel",
    "inviteCodeTitle1": "Please enter an invite code",
    "inviteCodeTitle2": "Or enter an invite code",
    "inviteCodePlaceholder": "Enter invite code",
    "inviteCodeTitle": "Or enter an invite code",
    "channelAlreadyJoined": "Channel already joined",
    "channelNotFound": "Channel not found",
    "selectEnterCode": "Please select a channel or enter an invite code.",
    "joinChannel": "Join Channel"
  },

  "memberDonatePage": {
    "appBarTitle": "Support Us",
    "donateText1": "Your donations help us provide valuable content to learners worldwide.",
    "donateText2": "Thank you for your support!",
...
