appId: com.musketeers.mobilearn
---
- launchApp
- tapOn: "CONTINUE"
- tapOn: "STUDENT"
- tapOn: "SIGN IN"
- tapOn: "Email"
- inputText: "mobilearn_daniel@gmail.com"
- tapOn: "Password"
- inputText: "admin"
- tapOn:
    text: "Sign In"
    index: 1
- runFlow:
    when:
      visible:
        text: "Select a channel"
        index: 0
    commands:
      - tapOn:
          text: "Select a Channel"
          index: 1
      - tapOn: "Mobilearn Public"
- runFlow:
    when:
      visible:
        text: "Enter invite code"
        index: 0
    commands:
      - tapOn: "Enter invite code"
      - inputText: "mobilearn"
      - tapOn: "Join Channel"
- tapOn:
    text: See All
    index: 0
- tapOn:
    point: 50%,17%
- scrollUntilVisible:
    element:
      text: "ENROLL NOW"
    direction: DOWN
- tapOn: "ENROLL NOW"
- tapOn: "CONTINUE"
- assertVisible: "Congratulations!"